# vectorlm

./: .gitignore  LICENSE  README.md  benchmark.py  data_utils.py  dev-requirements.txt  example_lora.py  finetune.py  launch_benchmark.py  launch_lora_benchmark.py  launch_train.sh  lora_benchmark.py  main.py  merge_qlora.py  model_utils.py  parse_benchmark.py  preprocess_data.py  pyproject.toml  rag.py  rag_dataset.py  requirements.txt  save_utils.py  setup.py  test.sh  train.py
configs/: config-lora-benchmark.yaml  config-lora.yaml  config.yaml  config_gemma.yaml
docs/: config.md  reference_throughput.md  sampling.md  training_optimizations.md
examples/: example_lora.py  launch.sh  launch_lora.sh  launch_lora_one_gpu.sh  launch_multinode.sh  llama_example.py  llama_example_mp.py  lora_hotswap_example.py  train_and_inference.py
legacy/: data_preprocess.py  data_process.sh  data_utils.py  model_utils.py  train.py
medgpt/: main.py
medgpt/configs/: config.yaml
medgpt/utils/: __init__.py  convert_to_hf.py  data_utils.py  misc_utils.py  model_utils.py  optimizer_utils.py  save_utils.py  trainer.py
profiling/: README.md  benchmark.py  launch_benchmark.py  launch_benchmark.sh  launch_lora_benchmark.sh  parse_benchmark.py
profiling/configs/: benchmark.yaml  lora-benchmark.yaml
vectorlm/: __init__.py  conditional_prompt.txt  dataset.py  trainer.py  trice.py
vectorlm/inference/: __init__.py  abstract.py  inference_lora.py
vectorlm/sampling/: __init__.py  abstract.py  sampling_lora.py  utils.py  vllm_worker_utils.py
vectorlm/tests/: test_dataset.py  test_modelling.py  test_sampling.py  test_trice.py  test_vllm.py
vectorlm/utils/: __init__.py  convert_to_hf.py  data_utils.py  misc_utils.py  save_utils.py  (+3 more)
