[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
lint.select = ["ALL"]
lint.ignore = [
    "ANN101",
    "FBT",
    "D100",
    "PTH",
    "TCH002",
    "S101",
    "N817",
    "TCH001",
    "E731",
    "PLR0913",
    "T201"
]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files.
"__init__.py" = ["F401", "D104"]
